--- a/alerting/package.json
+++ b/alerting/package.json
@@ -10,6 +10,9 @@
   "private": true,
   "license": "MIT",
   "packageManager": "yarn@1.22.22",
+  "resolutions": {
+    "glob": ">=10.5.0"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.json",
@@ -60,7 +63,7 @@
     "audit-ci": "^7.1.0",
     "eslint": "^8.45.0",
     "faker": "^4.1.0",
-    "glob": "^7.1.6",
+    "glob": "^10.5.0",
     "jest": "29.7.0",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
