--- a/alerting/package.json
+++ b/alerting/package.json
@@ -10,6 +10,9 @@
   "private": true,
   "license": "MIT",
   "packageManager": "yarn@1.22.22",
+  "_resolutions": {
+    "glob": ">=10.5.0 because of https://github.com/typeorm/typeorm/, try to remove once in a while."
+  },
   "resolutions": {
     "glob": ">=10.5.0"
   },
