--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -39,6 +39,7 @@ duckdb = "^1.2.0"
 vcrpy = "6.0.1"
 # some package isn't updated for numpy 2.x yet
 numpy = "<2.0"
+pypdf = "^5.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
