Make sure the workflow is run merge events

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,6 +4,7 @@ on:
   # Run on all pull requests and on pushes to master.
   # Note - pull_request_target runs the workflow from the main branch, not the PR branch.
   pull_request:
+    types: [opened, synchronize, reopened, closed]
   push:
     branches:
       - master
