--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,8 @@
     "precommit": "lint-staged",
     "check-boundary-keys": "node ./scripts/check-boundary-keys-validity.js",
     "preprocess-layers": "ts-node --compilerOptions \"{\\\"module\\\":\\\"commonjs\\\"}\" ./scripts/preprocess-layers.ts",
-    "audit": "audit-ci --config .audit-ci.json"
+    "audit": "audit-ci --config .audit-ci.json",
+    "check-resolutions": "node ../scripts/check-resolutions.js package.json"
   },
   "dependencies": {
     "@azure/msal-browser": "^2.19.0",
@@ -123,6 +124,19 @@
     "minimist": "^1.2.6",
     "glob": "^11.1.0",
     "tar-fs": "^3.1.1"
+  },
+  "_resolutionsNotes": {
+    "node-notifier": "Build compatibility - keep",
+    "canvas": "Prevents canvas installation (build optimization) - keep",
+    "ws": "CVE-2024-37890 - Security fix - Parent: jest-environment-jsdom → jsdom - Check if removable when jest-environment-jsdom updates",
+    "js-yaml": "CVE-2025-64718 - Security fix - Parent: eslint, babel-jest - Check if removable when these packages update",
+    "@babel/helpers": "CVE-2025-27789 - Security fix - Parent: @babel/core, eslint-config-react-app, babel-jest - Check if removable when @babel packages update",
+    "brace-expansion": "CVE-2025-5889 - Security fix - Parent: minimatch, @typescript-eslint/parser, @typescript-eslint/eslint-plugin - Check if removable when these packages update",
+    "sha.js": "CVE-2025-9288 - Security fix - Parent: create-hash, vite-plugin-node-polyfills - Check if removable when these packages update",
+    "form-data": "CVE-2025-7783 - Security fix - Parent: jest-environment-jsdom → jsdom, cypress - Check if removable when these packages update",
+    "minimist": "CVE-2021-44906 - Security fix - Parent: cypress, max-inscribed-circle, maplibre-gl, eslint-plugin-import - Check if removable when these packages update",
+    "glob": "CVE-2025-64756 - Security fix - Parent: rimraf, jest - Check if removable when these packages update",
+    "tar-fs": "CVE-2025-59343 - Security fix - Parent: (not found in dependency tree, may be transitive) - Check if removable when parent packages update"
   },
   "_comment": "The 'defaults' and 'not ie 11' are needed to avoid build issues with maplibre-gl.",
   "browserslist": {
