--- a/frontend/package.json
+++ b/frontend/package.json
@@ -124,7 +124,8 @@
     "minimist": "^1.2.6",
     "glob": "^11.1.0",
     "tar-fs": "^3.1.1",
-    "strip-ansi": "^6.0.1"
+    "strip-ansi": "^6.0.1",
+    "string-width": "^4.2.3"
   },
   "_resolutionsNotes": {
     "node-notifier": "Build compatibility - keep",
@@ -138,7 +139,8 @@
     "minimist": "CVE-2021-44906 - Security fix - Parent: cypress, max-inscribed-circle, maplibre-gl, eslint-plugin-import - Check if removable when these packages update",
     "glob": "CVE-2025-64756 - Security fix - Parent: rimraf, jest - Check if removable when these packages update",
     "tar-fs": "CVE-2025-59343 - Security fix - Parent: (not found in dependency tree, may be transitive) - Check if removable when parent packages update",
-    "strip-ansi": "Compatibility fix - Parent: glob → jackspeak - Forces v6 (CommonJS) for string-length compatibility - Check if removable when string-length/jest update to support strip-ansi v7"
+    "strip-ansi": "Compatibility fix - Parent: glob → jackspeak - Forces v6 (CommonJS) for string-length compatibility - Check if removable when string-length/jest update to support strip-ansi v7",
+    "string-width": "Compatibility fix - Parent: glob → jackspeak → cliui - Forces v4 (CommonJS) to work with strip-ansi v6 - Check if removable when glob/jackspeak update to versions compatible with strip-ansi v7"
   },
   "_comment": "The 'defaults' and 'not ie 11' are needed to avoid build issues with maplibre-gl.",
   "browserslist": {
