--- a/frontend/package.json
+++ b/frontend/package.json
@@ -189,7 +189,7 @@
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.2",
     "cross-fetch": "^4.0.0",
-    "cypress": "^15.1.0",
+    "cypress": "^15.7.1",
     "dotenv": "^16.4.5",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -210,14 +210,14 @@
     "jsonpath": "^1.1.1",
     "prettier": "^3.6.0",
     "redux-mock-store": "^1.5.4",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
     "timezone-mock": "^1.3.6",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "5.9.3",
     "vite": "^6.4.1",
-    "vite-plugin-node-polyfills": "^0.21.0",
-    "string-width": "^4.2.3",
-    "strip-ansi": "^6.0.1"
+    "vite-plugin-node-polyfills": "^0.21.0"
   },
   "engines": {
     "node": ">=20.6.0"
