--- a/frontend/package.json
+++ b/frontend/package.json
@@ -88,7 +88,7 @@
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "jspdf": "^3.0.2",
-    "lint-staged": "^10.0.8",
+    "lint-staged": "^16.2.7",
     "lodash": "^4.17.21",
     "maplibre-gl": "^3.6.2",
     "marked": "^4.0.10",
@@ -123,9 +123,7 @@
     "form-data": "^3.0.4",
     "minimist": "^1.2.6",
     "glob": "^11.1.0",
-    "tar-fs": "^3.1.1",
-    "strip-ansi": "^6.0.1",
-    "string-width": "^4.2.3"
+    "tar-fs": "^3.1.1"
   },
   "_resolutionsNotes": {
     "node-notifier": "Build compatibility - keep",
