--- a/frontend/package.json
+++ b/frontend/package.json
@@ -136,9 +136,7 @@
     "form-data": "CVE-2025-7783 - Security fix - Parent: jest-environment-jsdom → jsdom, cypress - Check if removable when these packages update",
     "minimist": "CVE-2021-44906 - Security fix - Parent: cypress, max-inscribed-circle, maplibre-gl, eslint-plugin-import - Check if removable when these packages update",
     "glob": "CVE-2025-64756 - Security fix - Parent: rimraf, jest - Check if removable when these packages update",
-    "tar-fs": "CVE-2025-59343 - Security fix - Parent: (not found in dependency tree, may be transitive) - Check if removable when parent packages update",
-    "strip-ansi": "Compatibility fix - Forces v6 (CommonJS) for string-length/jest compatibility - Also added as direct devDependency for Cypress - Check if removable when string-length/jest/cypress update to support strip-ansi v7",
-    "string-width": "Compatibility fix - Forces v4 (CommonJS) to work with strip-ansi v6 - Also added as direct devDependency for Cypress/cli-truncate - Check if removable when glob/jackspeak/cypress update to versions compatible with strip-ansi v7"
+    "tar-fs": "CVE-2025-59343 - Security fix - Parent: (not found in dependency tree, may be transitive) - Check if removable when parent packages update"
   },
   "_comment": "The 'defaults' and 'not ie 11' are needed to avoid build issues with maplibre-gl.",
   "browserslist": {
