--- a/frontend/package.json
+++ b/frontend/package.json
@@ -207,7 +207,8 @@
     "jsonpath": "^1.1.1",
     "prettier": "^3.6.0",
     "redux-mock-store": "^1.5.4",
-    "string-width": "^4.2.3",
+    "string-width": "4.2.3",
+    "strip-ansi": "6.0.1",
     "timezone-mock": "^1.3.6",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
