--- a/frontend/package.json
+++ b/frontend/package.json
@@ -123,7 +123,8 @@
     "form-data": "^3.0.4",
     "minimist": "^1.2.6",
     "glob": "^11.1.0",
-    "tar-fs": "^3.1.1"
+    "tar-fs": "^3.1.1",
+    "string-width": "4.2.3"
   },
   "_resolutionsNotes": {
     "node-notifier": "Build compatibility - keep",
@@ -207,8 +208,6 @@
     "jsonpath": "^1.1.1",
     "prettier": "^3.6.0",
     "redux-mock-store": "^1.5.4",
-    "string-width": "4.2.3",
-    "strip-ansi": "6.0.1",
     "timezone-mock": "^1.3.6",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
