--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "type": "module",
   "packageManager": "yarn@1.22.22",
   "husky": {
     "hooks": {
@@ -21,7 +22,7 @@
     "test:watch": "yarn test --watch",
     "build": "export GIT_HASH=$(git rev-parse --short HEAD) || true && tsc && cross-env vite build",
     "lint:ci": "yarn lint --max-warnings 0",
-    "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "preview": "vite preview",
     "setup:common": "rimraf ./node_modules/prism-common && cd ../common && yarn install --network-timeout 600000 && yarn build && cd ../frontend && yarn install --check-files",
     "setup:common_in_ci": "rm -rf ./node_modules/prism-common && cd ../common && yarn install --network-timeout 600000 && yarn build_in_ci && cd ../frontend",
