--- a/frontend/package.json
+++ b/frontend/package.json
@@ -115,29 +115,17 @@
   "resolutions": {
     "node-notifier": "^10.0.1",
     "canvas": "link:./node_modules/.cache/null",
-    "ws": "^8.17.1",
+    "glob": "^13.0.0",
     "js-yaml": "^4.1.1",
-    "@babel/helpers": "^7.26.10",
     "brace-expansion": "^2.0.2",
-    "sha.js": "^2.4.12",
-    "form-data": "^3.0.4",
-    "minimist": "^1.2.6",
-    "glob": "^11.1.0",
-    "tar-fs": "^3.1.1",
     "string-width": "4.2.3"
   },
   "_resolutionsNotes": {
     "node-notifier": "Build compatibility - keep",
     "canvas": "Prevents canvas installation (build optimization) - keep",
-    "ws": "CVE-2024-37890 - Security fix - Parent: jest-environment-jsdom → jsdom - Check if removable when jest-environment-jsdom updates",
-    "js-yaml": "CVE-2025-64718 - Security fix - Parent: eslint, babel-jest - Check if removable when these packages update",
-    "@babel/helpers": "CVE-2025-27789 - Security fix - Parent: @babel/core, eslint-config-react-app, babel-jest - Check if removable when @babel packages update",
-    "brace-expansion": "CVE-2025-5889 - Security fix - Parent: minimatch, @typescript-eslint/parser, @typescript-eslint/eslint-plugin - Check if removable when these packages update",
-    "sha.js": "CVE-2025-9288 - Security fix - Parent: create-hash, vite-plugin-node-polyfills - Check if removable when these packages update",
-    "form-data": "CVE-2025-7783 - Security fix - Parent: jest-environment-jsdom → jsdom, cypress - Check if removable when these packages update",
-    "minimist": "CVE-2021-44906 - Security fix - Parent: cypress, max-inscribed-circle, maplibre-gl, eslint-plugin-import - Check if removable when these packages update",
-    "glob": "CVE-2025-64756 - Security fix - Parent: rimraf, jest - Check if removable when these packages update",
-    "tar-fs": "CVE-2025-59343 - Security fix - Parent: (not found in dependency tree, may be transitive) - Check if removable when parent packages update",
+    "js-yaml": "CVE-2025-64718 - Security fix - Parent: eslint, babel-jest - Already at latest (4.1.1) - Keep resolution until eslint/babel-jest update",
+    "brace-expansion": "CVE-2025-5889 - Security fix - Parent: minimatch (via eslint), @typescript-eslint/parser, @typescript-eslint/eslint-plugin - Cannot upgrade to v4 (breaks eslint) - Keep at v2",
+    "glob": "CVE-2025-64756 - Security fix - Keep resolution: babel-jest → babel-plugin-istanbul → test-exclude still uses old glob 7.x, rimraf upgraded to 6.1.2",
     "string-width": "Compatibility fix - Parent: glob → jackspeak → cliui, cypress → listr2 - Forces v4 (CommonJS) for compatibility. Also installed as devDependency to ensure availability - Check if removable when these packages update"
   },
   "_comment": "The 'defaults' and 'not ie 11' are needed to avoid build issues with maplibre-gl.",
@@ -205,7 +193,7 @@
     "fast-glob": "^3.3.2",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
-    "jest-environment-jsdom": "^29.6.4",
+    "jest-environment-jsdom": "^30.2.0",
     "jsonpath": "^1.1.1",
     "prettier": "^3.6.0",
     "redux-mock-store": "^1.5.4",
