--- a/alerting/package.json
+++ b/alerting/package.json
@@ -15,24 +15,14 @@
   },
   "resolutions": {
     "glob": "^13.0.0",
-    "sha.js": "^2.4.12",
-    "form-data": "^3.0.4",
     "js-yaml": "^4.1.1",
-    "@babel/helpers": "^7.26.10",
     "brace-expansion": "^2.0.2",
-    "minimist": "^1.2.6",
-    "tar-fs": "^3.1.1",
     "string-width": "4.2.3"
   },
   "_resolutionsNotes": {
-    "glob": "CVE-2025-64756 + jest/typeorm-seeding compatibility - Parent: (direct devDependency), typeorm-seeding, typeorm, rimraf, jest - Review periodically and check when these update",
-    "sha.js": "CVE-2025-9288 - Security fix - Parent: typeorm - Check if removable when typeorm updates",
-    "form-data": "CVE-2025-7783 - Security fix - Parent: @types/node-fetch, supertest - Check if removable when these packages update",
-    "js-yaml": "CVE-2025-64718 - Security fix - Parent: eslint - Check if removable when eslint updates",
-    "@babel/helpers": "CVE-2025-27789 - Security fix - Parent: jest → @babel/core - Check if removable when jest/@babel packages update",
-    "brace-expansion": "CVE-2025-5889 - Security fix - Parent: minimatch, ejs - Check if removable when these packages update",
-    "minimist": "CVE-2021-44906 - Security fix - Parent: json5, tsconfig-paths - Check if removable when these packages update",
-    "tar-fs": "CVE-2025-59343 - Security fix - Parent: puppeteer → @puppeteer/browsers - Check if removable when puppeteer updates"
+    "glob": "CVE-2025-64756 + jest/typeorm-seeding compatibility - Parent: (direct devDependency), typeorm-seeding, typeorm, rimraf, jest - Already at latest (13.0.0) - Review periodically",
+    "js-yaml": "CVE-2025-64718 - Security fix - Parent: eslint - Already at latest (4.1.1) - Keep resolution until eslint updates",
+    "brace-expansion": "CVE-2025-5889 - Security fix - Parent: minimatch (via eslint), ejs - Cannot upgrade to v4 (breaks eslint) - Keep at v2 until eslint/minimatch support v4"
   },
   "scripts": {
     "prebuild": "rimraf dist",
@@ -68,28 +58,28 @@
     "nodemailer": "^7.0.11",
     "pg": "^8.5.1",
     "prism-common": "file:../common",
-    "puppeteer": "^24.1.1",
-    "typeorm": "^0.3.27",
+    "puppeteer": "^24.33.0",
+    "typeorm": "^0.3.28",
     "typeorm-naming-strategies": "^1.1.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^30.0.0",
     "@types/jimp": "^0.2.28",
     "@types/node": "20.14.8",
-    "@types/node-fetch": "^2.5.8",
+    "@types/node-fetch": "^2.6.13",
     "@types/nodemailer": "^7.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "audit-ci": "^7.1.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.57.1",
     "faker": "^4.1.0",
     "glob": "^11.1.0",
-    "jest": "29.7.0",
-    "rimraf": "^3.0.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "^29.2.0",
+    "jest": "^30.2.0",
+    "rimraf": "^6.1.2",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
