--- a/common/package.json
+++ b/common/package.json
@@ -21,8 +21,7 @@
     "test:wms": "tsx ./src/wms/utils/test.ts && tsx ./src/wms/WMS/test.ts",
     "test:utils": "tsx ./src/utils/test.ts",
     "test": "npm run test:base && npm run test:gml && npm run test:ows && npm run test:tsc && npm run test:utils && npm run test:wcs && npm run test:wfs && npm run test:wms",
-    "audit": "audit-ci --config .audit-ci.json --skip-dev",
-    "check-resolutions": "node ../scripts/check-resolutions.js package.json"
+    "audit": "audit-ci --config .audit-ci.json --skip-dev"
   },
   "repository": {
     "type": "git",
