--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -98,6 +98,10 @@ jobs:
         with:
           node-version: 20
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
       - uses: actions/cache@v4
         id: yarn-cache
         with:
@@ -106,6 +110,7 @@ jobs:
             **/.eslintcache
             **/common/dist
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
+            ~/.cache/Cypress
           key: ${{ runner.os }}-yarn-2025-3-${{ hashFiles('**/frontend/yarn.lock') }}-${{ hashFiles('**/common/.lock', '**/common/src/**/*.ts') }}
           restore-keys: |
             ${{ runner.os }}-yarn-2025-3
