Better trigger ready state, update parellization

--- a/api/docker-compose.deploy.yml
+++ b/api/docker-compose.deploy.yml
@@ -33,6 +33,7 @@ services:
 
   api:
     container_name: "api"
+    shm_size: '2gb'
     networks:
       - traefik_default
       - default
@@ -45,7 +46,7 @@ services:
       - "traefik.http.routers.whoami.tls.certresolver=myresolver"
     environment:
       - "RUN=uvicorn prism_app.main:app --host 0.0.0.0 --port 80"
-      - MAX_CONCURRENT_RENDERS=6
+      - BROWSER_POOL_SIZE=4
       # make sure that the alert password is properly set
       - PRISM_ALERTS_DATABASE_URL=${PRISM_ALERTS_DATABASE_URL:?"Provide a URL for the alerts database."}
       - KOBO_PASSWORD=${KOBO_PASSWORD:?"Add a password to access KOBO data."}
