--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -24,6 +24,7 @@ boto3 = "^1.40.1"
 cachetools = "^5.3.1"
 odc-geo = "^0.4.1"
 odc-stac = "^0.4.0"
+pypdf = "^6.6.0"
 pystac-client = "^0.8.6"
 pystac = "^1.12.2"
 pytest-asyncio = "^1.0.0"
